	FIX: Fixed the miniboss of the Forest Temple (B3) death sequence not being triggered (#115).
	FIX: Fixed a wall being visible in the Fire Temple (B2) at door 35N (#116).
	REM: Removed ignored files.

Alpha 1.16.2 (started 11/04/23) "Mackerel Update":
	ADD: Added maps.
	ADD: Added more than 30 NPC sprites (#23).
	ADD: Added treasure items.
	CHG: Renamed NPC sprites (#23).
	CHG: Splitted the pause menu background in multiple rows (#117).
	CHG: Drawn pause menu title captions separately to add support for translations (#118).
	CHG: Moved pause menu sprites to a separate folder.
	CHG: Renamed collectible treasure items.
	CHG: Changed sword colour on hero (#21).
	CHG: Made the HUD icons semi-transparent when the hero is underneath (#123).
	FIX: Fixed collectible treasures amount not being updated (#122).
	FIX: Fixed static items sprites not showing the right variant in the inventory (#125).
	FIX: Fixed scrollable map not being centered when using another quest size (#126).
	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
	TDO: Add coloured keys to the dungeon minimap menu.
	TDO: Replace corrupt files.
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix the water level changing animation in the Water Temple (#56).
	TDO: Fix crash on ocarina cinematic because of an invalid animation direction (#63).
	TDO: Fix changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix not enough memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Fix the HUD clock showing the wrong hour randomly (#114).

Alpha 1.17 (//23) "Needlefish Update":