@@ -1,10 +1,12 @@
 local item = ...
 
-function item:on_created()
+function item:on_obtaining(variant, savegame_variable)
 
-  self:set_shadow("small")
-  self:set_brandish_when_picked(false)
-  self:set_sound_when_picked("common/get_small_item1")
-  self:set_sound_when_brandished("common/get_small_item1")
+  -- Save the possession of the red key in the current dungeon.
+  local game = self:get_game()
+  local dungeon = game:get_dungeon_index()
+  if dungeon == nil then
+    error("This map is not in a dungeon")
+  end
+  game:set_value("dungeon_" .. dungeon .. "_red_key", true)
 end
-
