@@ -343,6 +343,7 @@ Alpha 1.16.2 (started 11/04/23) "Mackerel Update":
 	ADD: Added maps.
 	ADD: Added more than 30 NPC sprites (#23).
 	ADD: Added treasure items.
+	ADD: Added coloured keys to dungeon informations.
 	CHG: Renamed NPC sprites (#23).
 	CHG: Splitted the pause menu background in multiple rows (#117).
 	CHG: Drawn pause menu title captions separately to add support for translations (#118).
@@ -368,6 +369,7 @@ Alpha 1.16.2 (started 11/04/23) "Mackerel Update":
 	TDO: Fix the HUD clock showing the wrong hour randomly (#114).
 
 Alpha 1.17 (//23) "Needlefish Update":
+	TDO: Remove work *.xcf and *.psd files from the data files.
 	TDO: Add the ability to switch shaders through the options menu (#119).
 	TDO: Add night entities to maps (#67).
 	TDO: Add hook entities to trees (#103).
